--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-title: 我的Blog
+title: Smart2 Manual
 ---
 
 <h2>{{ page.title }}</h2>
 
-<p>最新文章</p>
 <ul>
 
 {% for post in site.posts %}
